bases/apps/psuite/psuite-wiki/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psuite-wiki
spec:
  selector:
    matchLabels:
      app: psuite-wiki
  template:
    metadata:
      labels:
        app: psuite-wiki
    spec:
      containers:
      - name: silverbullet
        image: zefhemel/silverbullet:0.10.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
          name: http
        volumeMounts:
        - name: psuite-data
          mountPath: /psuite-data
      restartPolicy: Always
      volumes:
      - name: psuite-data
        persistentVolumeClaim:
          claimName: psuite-data
