bases/apps/psuite/psuite-wiki/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: psuite-wiki
    app.kubernetes.io/name: psuite-wiki
    app.kubernetes.io/service: psuite-wiki
  name: psuite-wiki
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: psuite-wiki
  type: ClusterIP
